# Langchain_Study

./: pyproject.toml
days/days01/: LCEL.ipynb
days/days02/: cache.db  notebook.ipynb
days/days03/: notebook.ipynb
