    [project]
    name = "langchain-study"
    version = "0.1.0"
    description = "Add your description here"
    readme = "README.md"
    requires-python = ">=3.13"
    dependencies = [
        "ipykernel>=6.30.1",
        "langchain>=0.3.27",
        "langchain-community>=0.3.29",
        "langchain-core>=0.3.76",
        "langchain-openai>=0.3.33",
        "networkx>=3.5",
]

    [dependency-groups]
    dev = [
        "ipykernel>=6.30.1",
    ]
